Fix non-Unicode primitives incorrect colouring in dark mode in Power Search Bar, Kanji confirm dialog and in cards' Stories section.

--- a/addon/web/styles.css
+++ b/addon/web/styles.css
@@ -566,8 +566,11 @@ button.primitive:focus .kanji-addon__hover-tooltip,
 
 .ankidroid_dark_mode .title-tooltip__container img,
 .nightMode .title-tooltip__container img,
-.dark .title-tooltip__container img {
-	filter: invert(1);
+.dark .title-tooltip__container img,
+.ankidroid_dark_mode .stories__container img,
+.nightMode .stories__container img,
+.dark .stories__container img {
+		filter: invert(1);
 }
 
 .title-tooltip__container .separator {
